--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -11,19 +11,24 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">REGISTRO INVENTARIO</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">
+          REGISTRO INVENTARIO
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
       <div class="modal-body">
-
-
         <form (ngSubmit)="guardarCabecera()" [formGroup]="formularioRegistro">
           <div class="px-4 py-0 gap-0 text-center overflow-y-auto">
-
             <div class="flex-1 mt-0">
               <div class="mb-1">
-
-                <label for="empresas" class="w-full text-left form-label">Empresas</label>
+                <label for="empresas" class="w-full text-left form-label"
+                  >Empresas</label
+                >
                 <select
                   id="empresas"
                   formControlName="rucempresa"
@@ -43,11 +48,11 @@
               </div>
             </div>
 
-
             <div class="flex-1">
               <div class="mb-1">
-
-                <label for="empresas" class="w-full text-left form-label">Asignar usuario</label>
+                <label for="empresas" class="w-full text-left form-label"
+                  >Asignar usuario</label
+                >
                 <select
                   id="usuarioAsignar"
                   formControlName="usuarioasignado"
@@ -55,9 +60,9 @@
                   class="form-select"
                   aria-label="Default select example"
                 >
-                <option value="" disabled selected>
-                  Seleccione una Usuario
-                </option>
+                  <option value="" disabled selected>
+                    Seleccione una Usuario
+                  </option>
                   @for (item of getUsuarios_All; track $index) { @if
                   (item.estado == '1') {
                   <option [value]="item.idusuario">
@@ -66,7 +71,6 @@
                   </option>
                   } }
                 </select>
-
               </div>
             </div>
 
@@ -155,62 +159,71 @@
                 </button>
               </div> -->
 
-              <div class="Nombre_Inventario">
-                <label
-                  for="af-submit-project-url"
-                  class="inline-block text-sm font-medium text-gray-800 mt-2.5 "
-                >
-                  Nombre
-                </label>
-                @if (selectedFileName) {
-                <input
-                  formControlName="descripcion"
-                  [(ngModel)]="Cabecera.descripcion"
-                  id="af-submit-project-url"
-                  type="text"
-                  [value]="selectedFileName"
-                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
-                  placeholder="Ingresar nombre"
-                />
-                }@else {
-                <input
-                  formControlName="descripcion"
-                  [(ngModel)]="Cabecera.descripcion"
-                  id="af-submit-project-url"
-                  type="text"
-                  [value]="selectedFileName"
-                  class="py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
-                  placeholder="Ingresar nombre"
-                />
-                }
+              <div>
+                <!-- class="Nombre_Inventario" -->
+                <div class="input-descripcion">
+                  <mat-form-field class="example-full-width">
+                    <mat-label>Nombre inventario</mat-label>
+                    <input
+                      formControlName="descripcion"
+                      [(ngModel)]="Cabecera.descripcion"
+                      matInput
+                      placeholder="Ingresar nombre"
+                    />
+                  </mat-form-field>
+
+
+
+                  <button
+                    type="button"
+                    mat-fab
+                    (click)="
+                      ValidarDescripcionInventario(
+                        this.formularioRegistro.value.descripcion.toUpperCase()
+                      )
+                    "
+                  >
+                    <mat-icon>search</mat-icon>
+                  </button>
+                </div>
               </div>
               <div class="modal-footer">
                 <div class="Buttons_eventos">
                   <button
-                  (click)="limpiarDatosPreview()"
+                    (click)="limpiarDatosPreview()"
                     type="button"
                     data-bs-dismiss="modal"
                   >
                     Cancelar
                   </button>
+                  @if (respuestaValidacionDescripcion == 1) {
+                    <button
+                    disabled = 'true'
+                    type="submit"
+                    class="btn btn-primary"
+                  >
+                    Siguiente
+                  </button>
+                  }
 
-                  <button
+                  @if (respuestaValidacionDescripcion == 0) {
+                    <button
                     [disabled]="
                       !HayArchivo ||
-                      formularioRegistro.controls['rucempresa'].invalid ||
-                      formularioRegistro.controls['descripcion'].invalid
+                      formularioRegistro.invalid
                     "
                     type="submit"
                     class="btn btn-primary"
                   >
                     Siguiente
                   </button>
+                  }
+
                 </div>
               </div>
             </div>
           </div>
         </form>
-
       </div>
     </div>
   </div>
