--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -27,7 +27,7 @@
 
     </div>
   </div>
-  <div class="container_menuopciones">
+  <!-- <div class="container_menuopciones">
     <section-targets-datos />
-  </div>
+  </div> -->
 </div>
