--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -49,12 +49,17 @@
             class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
           >
             <div class="mat-elevation-z8">
-              <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+              <table
+                mat-table
+                [dataSource]="dataSource"
+                matSort
+                (matSortChange)="announceSortChange($event)"
+              >
                 <!-- =================================================================================== -->
                 <!-- Fecha registro-->
                 <!-- =================================================================================== -->
                 <ng-container matColumnDef="fechacreacion">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header >
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     F. registro
                   </th>
                   <td mat-cell *matCellDef="let row">
@@ -71,13 +76,15 @@
                 <!-- =================================================================================== -->
                 <!-- Descripción -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="descripcion" >
+                <ng-container matColumnDef="descripcion">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Descripción
                   </th>
                   <td mat-cell *matCellDef="let row">
                     <button class="px-6 py-3 flex gap-2 align-center">
-                      <span class="text-sm text-gray-600 dark:text-neutral-400">
+                      <span
+                        class="text-sm text-left text-gray-600 dark:text-neutral-400"
+                      >
                         {{ row.descripcion.toUpperCase() || "- sin nombre -" }}
                       </span>
                     </button>
@@ -91,17 +98,14 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Total ítems
                   </th>
-                  <td mat-cell *matCellDef="let row" >
+                  <td mat-cell *matCellDef="let row">
                     <div class="flex justify-end">
                       <span
-                      class="cantidadtotal py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-[#7197cc] text-white rounded-full"
-                    >
-                    {{ row.totalregistros || "-" }}
-                    </span>
+                        class="cantidadtotal py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-[#7197cc] text-white rounded-full"
+                      >
+                        {{ row.totalregistros || "-" }}
+                      </span>
                     </div>
-
-
-
                   </td>
                 </ng-container>
 
@@ -145,9 +149,7 @@
                 <!-- Anular -->
                 <!-- =================================================================================== -->
                 <ng-container class="buttons" matColumnDef="operaciones">
-                  <th mat-header-cell *matHeaderCellDef >
-                    Operaciones
-                  </th>
+                  <th mat-header-cell *matHeaderCellDef>Operaciones</th>
                   <td mat-cell *matCellDef="let row">
                     <div class="flex">
                       <td-table-btn-detalle
