04_03_2025 MOSTRAR INFORMACION COPMPLETA DE LOS FILTROS

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -13,8 +13,7 @@
           'bg-white text-white': row.esnuevo == 0,
           'bg-[var(--color-principal-5)] text-white': row.esnuevo == 1
         }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.codigoproducto }}
+          <span class="text-sm text-gray-600 dark:text-neutral-400">  {{ row.codigoproducto }}
           </span>
         </button>
       </td>
