--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -203,7 +203,6 @@
       </div>
     </div>
   </div>
-
   <div class="offcanvas-body pt-1 h-full overflow-hidden flex flex-col">
     <section class="h-full max-h-screen">
       <div class="max-w-[98vw] mx-auto h-full">
@@ -211,19 +210,19 @@
           <div class="-m-1.5 overflow-x-auto scroll-table h-full">
             <div class="p-1.5 min-w-full inline-block align-middle h-full">
               <div
-                class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden h-full"
+                class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-auto max-h-[80vh]"
               >
                 <div class="mat-elevation-z8 relative p-4">
                   <filtros-checkbox-tabla
                     class="filtros"
-                    (columnasSeleccionadas)="
-                      recibirColumnasSeleccionadas($event)
-                    "
-                  ></filtros-checkbox-tabla>
-                  <design-page-tabla-datos
-                    [listaProductos]="listaProductos"
-                    [columnasSeleccionadas]="columnasSeleccionadas"
-                  ></design-page-tabla-datos>
+                    (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)"
+                  />
+                  <div class="overflow-auto max-h-[70vh]">
+                    <design-page-tabla-datos
+                      [listaProductos]="listaProductos"
+                      [columnasSeleccionadas]="columnasSeleccionadas"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -232,4 +231,5 @@
       </div>
     </section>
   </div>
+
 </div>
